--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
-    "react-simple-code-editor": "^0.11.2"
+    "react-simple-code-editor": "^0.11.2",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
