--- a/client/package.json
+++ b/client/package.json
@@ -10,21 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.294.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-simple-code-editor": "^0.11.2",
-    "recharts": "^3.0.0"
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.53.0",
